--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "Liga-A-accelerator-template",
+  "name": "smart-device",
   "version": "2.0.0",
   "type": "module",
   "description": "Стартовый шаблон сборки Лиги А",
+  "homepage": "https://victoradamus.github.io/smart-device",
   "browserslist": [
     "last 3 versions",
     "IE 11",
@@ -15,7 +16,8 @@
     "build": "cross-env NODE_ENV=production gulp build & gulp imagemin",
     "start": "cross-env NODE_ENV=development gulp start",
     "webp": "gulp webp",
-    "imagemin": "gulp imagemin"
+    "imagemin": "gulp imagemin",
+    "deploy": "gh-pages -d build"
   },
   "editorconfig-cli": [
     "*.json",
@@ -39,6 +41,7 @@
     "duplicate-package-checker-webpack-plugin": "3.0.0",
     "eslint": "7.32.0",
     "eslint-config-htmlacademy": "^8.0.0",
+    "gh-pages": "^5.0.0",
     "gulp": "4.0.2",
     "gulp-csso": "4.0.1",
     "gulp-group-css-media-queries": "1.2.2",
